--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "dev": "vite"
   },
   "dependencies": {
-    "@mdi/font": "5.9.55",
+    "@mdi/font": "^7.1.96",
     "roboto-fontface": "*",
-    "vue": "^3.2.43",
-    "vue-router": "^4.1.5",
-    "vuetify": "^3.0.0-beta.0",
-    "webfontloader": "^1.0.0"
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6",
+    "vuetify": "^3.1.4",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.1.2",
-    "vite": "^3.1.8",
-    "vite-plugin-vuetify": "^1.0.0-alpha.12",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "vite": "^4.1.1",
+    "vite-plugin-vuetify": "^1.0.2",
     "vue-cli-plugin-vuetify": "~2.5.8"
   }
 }
