--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "portfolio",
-  "version": "0.0.0",
-  "scripts": {
-    "serve": "vite preview",
-    "build": "vite build",
-    "dev": "vite"
-  },
-  "dependencies": {
-    "@mdi/font": "^7.1.96",
-    "roboto-fontface": "*",
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6",
-    "vuetify": "^3.1.4",
-    "webfontloader": "^1.6.28"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
-    "vite": "^4.1.1",
-    "vite-plugin-vuetify": "^1.0.2",
-    "vue-cli-plugin-vuetify": "~2.5.8"
-  }
+    "name": "portfolio",
+    "version": "0.0.0",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "serve": "vite preview",
+        "prettier": "prettier --write ."
+    },
+    "dependencies": {
+        "@mdi/font": "^7.1.96",
+        "roboto-fontface": "*",
+        "vue": "^3.2.47",
+        "vue-router": "^4.1.6",
+        "vuetify": "^3.1.4",
+        "webfontloader": "^1.6.28"
+    },
+    "devDependencies": {
+        "@vitejs/plugin-vue": "^4.0.0",
+        "prettier": "^3.1.0",
+        "vite": "^4.1.1",
+        "vite-plugin-vuetify": "^1.0.2",
+        "vue-cli-plugin-vuetify": "~2.5.8"
+    }
 }
